--- a/src/app/Customer/GridComponent.html
+++ b/src/app/Customer/GridComponent.html
@@ -1,16 +1,14 @@
-Displaying Record for {{EntityName}}<<=This binding code working fine and whose value is changing on change of parent.
-<br>
-Through constructor, grid component is binding.
-But this compoent is not detecting parent property change when i pusthvalues to an array.
+<h3>Generic child component</h3>
+Displaying Record for {{EntityName}}
 
-  <table border="1">
-    <tr>
-      <td *ngFor="let colName of gridColumns">
-        {{colName}}
-      </td>
-    </tr>
-    <tr *ngFor="let dr of gridData">
-      <td *ngFor="let colName of gridColumns">{{dr[colName]}}</td>
-      <td><a (click)="Select(cust)">Select</a></td>
-    </tr>
-  </table>
+<table border="1">
+  <tr>
+    <td *ngFor="let colName of gridColumns">
+      {{colName}}
+    </td>
+  </tr>
+  <tr *ngFor="let drObj of gridData">
+    <td *ngFor="let colName of gridColumns">{{drObj[colName]}}</td>
+    <td><a (click)="Select(drObj)">Select</a></td>
+  </tr>
+</table>
